# Lattice-Boltzmann

./: CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
include/app/: Controller.h  GUI.h
include/core/: Kernels.h  Simulation.h
include/utils/: Colors.h  Exception.h  Measurement.h  TimeIt.h
src/: CMakeLists.txt
src/app/: Controller.cu  GUI.cpp  GUI.cu
src/core/: Kernels.cu  Simulation.cu
src/utils/: Colors.cu  Timeit.cpp  Timeit.cu
